--- a/scss/carousel.scss
+++ b/scss/carousel.scss
@@ -18,6 +18,12 @@
       display: block;
     }
   }
+  @media screen and (max-width: 560px) {
+    height: 50vw;
+    .prev, .next {
+      line-height: 100%;
+    }
+  }
 }
 
 .carousel * {
@@ -33,14 +39,17 @@
   display: block;
   height: 100%;
   opacity: 0;
+  overflow: hidden;
   position: absolute;
   top: 0;
   transform: scale(0);
   transition: all .7s ease-in-out;
   width: 100%;
+  @include prefix(border-radius, 10px);
   img {
-    height: 100%;
+    height: auto;
     width: 100%;
+    @include center;
     @include prefix(border-radius, 10px);
     @include prefix(box-shadow, 2px 2px 2px #666);
   }
